--- a/Main /style.css
+++ b/Main /style.css
@@ -40,12 +40,12 @@ nav img {
   font-size: 16px;
 }
 
-/* .nav-links ul li a:hover {
+ .nav-links ul li a:hover {
   color: #fff;
   font-size: 18px;
   text-decoration: 2px underline #f44336;
   font-weight: 500;
-} */
+} 
 
 /* tex-box */
 
