--- a/Main /style.css
+++ b/Main /style.css
@@ -55,7 +55,7 @@ nav img {
   position: absolute;
   top: 45%;
   left: 2%;
-  /* transform: translate(-50%, -50%);  */
+  transform: translate(-50%, -50%);  
 
   text-align: center;
 }
