--- a/Main /style.css
+++ b/Main /style.css
@@ -86,11 +86,11 @@ nav img {
   text-decoration: none;
 }
 
-/* #login-text-box:hover {
+ #login-text-box:hover {
     border: 1px solid #f44336;
     background: #f44336;
     transition: 1s;
-} */
+} 
 
 
 /* Courses  */
