--- a/Main /style.css
+++ b/Main /style.css
@@ -179,9 +179,9 @@ h3{
   font-weight: 600;
   margin: 10px 0;
 }
-/* .course-col:hover{
+ .course-col:hover{
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
-} */
+} 
 
 
 /*---------------- campus ----------------*/
