--- a/Main /style.css
+++ b/Main /style.css
@@ -212,9 +212,9 @@ h3{
   position: absolute;
   transition: .5s;
 }
-/* .layer:hover{
+ .layer:hover{
   background: rgba(226, 0, 0, 0.7);
-} */
+} 
 .layer h3{
   width: 100%;
   font-weight: 500;
@@ -225,10 +225,10 @@ h3{
   opacity: 0;
   transition: .5s;
 }
-/* .layer:hover h3{
+ .layer:hover h3{
   bottom: 49%;
   opacity: 1;
-} */
+} 
 
 /*-------------- Facilities ----------------*/
 
